# todolist_server

./: .buildpacks  .gitignore  README.md  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_todoitem_done.py
todolist/: settings.py  urls.py
